@@ -4,7 +4,8 @@
 \usage{
     netbenchmark(methods="all.fast",datasources.names="all",experiments=150,
         eval="AUPR",no.topedges=20,datasets.num=5,local.noise=20,
-        global.noise=0,noiseType="normal",sym=TRUE,plot=FALSE,seed=NULL)
+        global.noise=0,noiseType="normal",sym=TRUE,plot=FALSE,seed=NULL,
+        verbose=TRUE)
 }
 \arguments{
     \item{methods}{A vector of characters containing the names of network 
@@ -36,6 +37,9 @@
     \item{seed}{A single value, interpreted as an integer to specify seeds, 
     useful for creating simulations that can be reproduced 
     (default: \code{NULL}) - see \code{\link[base]{set.seed}}.}
+    \item{verbose}{Logical specifying if the code should provide a log 
+    about what the function is doing}
+    
 }
 
 \value{ 
